{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 135,
  "lineage": "d3352a48-fb97-f8a7-b9cb-ce37b81c7388",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:133414117615:instance/i-0dcf52b49900c5b4a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0dcf52b49900c5b4a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-08c7b385001011cbd",
            "private_dns": "ip-10-0-0-219.eu-west-2.compute.internal",
            "private_ip": "10.0.0.219",
            "public_ip": "35.178.178.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-03dfda6f48b622140",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ed23725b211ed47",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-078aa503e436876b0"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0be21c0b13b1fcf78",
            "owner_id": "133414117615",
            "vpc_id": "vpc-03c977da0ca9d9974"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01247b372f36a7417",
            "original_route_table_id": "rtb-0b58f5293aa5d2e85",
            "route_table_id": "rtb-0db34f335aaf9c4d1",
            "vpc_id": "vpc-03c977da0ca9d9974"
          },
          "depends_on": [
            "aws_route_table.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0db34f335aaf9c4d1",
            "owner_id": "133414117615",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be21c0b13b1fcf78",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-03c977da0ca9d9974"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:133414117615:security-group/sg-078aa503e436876b0",
            "description": "Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078aa503e436876b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-security-group",
            "name_prefix": null,
            "owner_id": "133414117615",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-03c977da0ca9d9974"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:133414117615:subnet/subnet-05ed23725b211ed47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-05ed23725b211ed47",
            "map_public_ip_on_launch": false,
            "owner_id": "133414117615",
            "vpc_id": "vpc-03c977da0ca9d9974"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:133414117615:vpc/vpc-03c977da0ca9d9974",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-007d00bb4d6bf1c81",
            "default_route_table_id": "rtb-0b58f5293aa5d2e85",
            "default_security_group_id": "sg-07e5cf19e88e3bb16",
            "dhcp_options_id": "dopt-fb703793",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03c977da0ca9d9974",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b58f5293aa5d2e85",
            "owner_id": "133414117615"
          }
        }
      ]
    }
  ]
}